--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@
 storage.googleapis.com
 runs/*
 data/*
+!data/*.yaml
 !data/images/zidane.jpg
 !data/images/bus.jpg
 !data/coco.names
@@ -58,6 +59,7 @@ VOC/
 *.torchscript
 darknet53.conv.74
 yolov3-tiny.conv.15
+!models/*.pt
 
 # GitHub Python GitIgnore ----------------------------------------------------------------------------------------------
 # Byte-compiled / optimized / DLL files
